<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:background="@color/labelsbg"
        android:gravity="center"
        android:text="@string/game"
        android:textAllCaps="true"
        android:textColor="@color/label"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:background="@drawable/custom_button"
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="128dp"
        android:onClick="onPlayClick"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/play"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:background="@drawable/custom_button"
        android:id="@+id/button9"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="onLeaderboardClick"
        android:text="@string/scores"
        android:textSize="20sp" />

    <Button
        android:background="@drawable/custom_button"
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="onSettingsClick"
        android:text="@string/opts"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:background="@drawable/custom_button"
        android:id="@+id/button6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="onApieClick"
        android:text="@string/about"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="@string/about" />

</LinearLayout>