<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/options"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal|top|center_vertical"
            android:inputType="textPersonName"
            android:text="@string/opts"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="45dp">

            <TextView
                android:id="@+id/NameText"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/NameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/background_white"
                android:autofillHints="Vardas"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/age"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/AgeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/background_white"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/difficulityText"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/difficulty"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                android:textColor="@color/background_white"
                android:entries="@array/diff_array"
                android:spinnerMode="dropdown" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/UsernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/background_white"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/Savebtn"
            android:background="@drawable/custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSaveClick"
            android:text="@string/save"
            tools:onClick="onSaveClick" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>