<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Play">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/options"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ejimas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/liko_ejimu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turns"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/guessField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName|numberDecimal"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button8"
                android:background="@drawable/custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onGuessClick"
                android:text="@string/speti"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>